syntax = "proto3";

package jobs;

option go_package = "github.com/SyneHQ/dramtic.jobs/proto;proto";

message Resources { string cpu = 1; string memory = 2; }

enum JobType { JOB_TYPE_ONE_TIME = 0; JOB_TYPE_REPEATABLE = 1; }

message RunJobRequest {
  string name = 1;
  string command = 2; // e.g., "ack", "migrateJob", etc.
  string args_base64 = 3;
  Resources resources = 4;
  JobType type = 5;
  string schedule = 6; // cron or duration string
}

message RunJobResponse { string id = 1; string logs = 2; }

message DeleteJobRequest { string name = 1; }
message DeleteJobResponse {}

message UpdateScheduleRequest { string name = 1; string schedule = 2; }
message UpdateScheduleResponse {}

message ListSchedulesRequest {}
message ScheduleItem { string name = 1; string command = 2; string args_base64 = 3; string cron = 4; Resources resources = 5; }
message ListSchedulesResponse { repeated ScheduleItem items = 1; }

service JobsService {
  rpc RunJob(RunJobRequest) returns (RunJobResponse);
  rpc DeleteJob(DeleteJobRequest) returns (DeleteJobResponse);
  rpc UpdateSchedule(UpdateScheduleRequest) returns (UpdateScheduleResponse);
  rpc ListSchedules(ListSchedulesRequest) returns (ListSchedulesResponse);
}


